# mcp-musicbox

./: CLAUDE.md  README.md  pyproject.toml
mcp-musicbox/: __init__.py  __main__.py  server.py
