[project]
name = "mcp-musicbox"
version = "0.1.0"
description = "MCP server for Sonic Pi"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-osc>=1.9.3",
    "python-sonic>=0.4.4",
    "ruff>=0.11.2",
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
mcp-musicbox = "mcp_musicbox.server:main"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp-musicbox"]
